feat: modified html content && styles

--- a/esoteric/vite-sass/src/pages/homepage/about/about.html
+++ b/esoteric/vite-sass/src/pages/homepage/about/about.html
@@ -1,67 +1,58 @@
 <section id="about" class="section about">
    <div class="section__title">
-      <p class="section__title_title">Василь Байдак</p>
-      <p class="section__title_description"></p>
+      <p class="section__title_title">Світлана Титаренко</p>
    </div>
 
    <div class="section__content">
       <article class="about__article">
          <div class="about__article-content">
             <p class="about__article__text">
-               Всього лише за
-               <strong class="colored"> 8 місяців </strong>
-               я:
+               За
+               <strong class="colored"> 2,5 роки </strong>
+               практики, я:
             </p>
             <ul>
                <li>
                   <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
                   <p class="about__article__text">
-                     voluptas quisquam <strong class="colored"> e quos architecto voluptas </strong> , itaque
-                     perspiciatis eligendi expedita
+                     Зі сторінки з 0 підписників набрала <strong class="colored"> 10 тисяч </strong>активної аудиторії,
+                     зацікавленій у езотериці
                   </p>
                </li>
                <li>
                   <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
                   <p class="about__article__text">
-                     maxime hic, at<strong class="colored"> e quos architecto voluptas </strong> repudianda quisquam
-                     itaque perspiciatis eligendi expedita
+                     Запустила курс <strong class="colored">«Таро. Від нуля до практика»</strong> по колоді Райдера
+                     Уейта, який пройшли <strong class="colored">більше 600 учнів.</strong>
                   </p>
                </li>
                <li>
                   <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
                   <p class="about__article__text">
-                     maxime hic, at repudiandae quos architecto voluptas quisquam itaque
-                     <strong class="colored">perspiciatis eligendi expedita</strong>
+                     Запустила курс <strong class="colored">«Таро Манара»</strong>, який пройшли
+                     <strong class="colored">більше 100 учнів.</strong>
                   </p>
                </li>
                <li>
                   <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
                   <p class="about__article__text">
-                     maxime hic, at repudiandae quos architecto voluptas quisquam
-                     <strong class="colored"> eligendi expedita </strong>itaque perspiciatis
+                     Організовую на постійній основі <strong class="colored">езотеричні зустрічі</strong>, які дають
+                     шалену мотивацію для розвитку.
                   </p>
                </li>
                <li>
                   <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
                   <p class="about__article__text">
-                     <strong class="colored"> at repudiandae quos architecto </strong>maxime hic, voluptas quisquam
-                     itaque perspiciatis eligendi expedita
-                  </p>
-               </li>
-               <li>
-                  <img class="ico" src="../../../assets/images/icons/symbol-svgrepo.svg" alt="windmil ico" />
-                  <p class="about__article__text">
-                     maxime hic, at repudiandae quos architecto voluptas quisquam<strong class="colored">
-                        8 місяців
-                     </strong>
-                     itaque perspiciatis eligendi expedita
+                     Організувала <strong class="colored">круте комʼюніті</strong> з учнів, клієнтів та моїх
+                     підписників, які приймають <strong class="colored">участь у челенджах онлайн</strong> і рухаються
+                     разом зі мною до однієї спільної мети.
                   </p>
                </li>
             </ul>
          </div>
          <div class="about__article__picture">
             <div class="about__article__picture-frame">
-               <img src="../../../assets/images/background/magic-8986975_640.jpg" alt="magic triangle" />
+               <img src="../../../assets/images/photo/IMG_5384.jpg" alt="magic triangle" />
             </div>
          </div>
       </article>
@@ -69,30 +60,29 @@
       <article class="about__article">
          <div class="about__article__picture">
             <div class="about__article__picture-frame">
-               <img src="../../../assets/images/background/tarot-8777282_640.webp" alt="cards tarot" />
+               <img src="../../../assets/images/photo/IMG_1188.jpeg" alt="cards tarot" />
             </div>
          </div>
          <div class="about__article-content">
             <p class="about__article__text">
-               sit debitis aperiam ipsa omnis molestiae maxime hic, at repudiandae
-               <strong> quos architecto voluptas quisquam </strong> itaque perspiciatis eligendi expedita voluptates
-               ullam! Sint.
+               Запускаючи свою сторінку, я <strong>боялась показувати своє обличчя</strong> і не розповідала нікому зі
+               своїх друзів про шлях, який обрала. <strong>Я відчувала, що езотерика - моє призначення</strong>, але
+               було дуже страшно заявити про себе.
             </p>
             <p class="about__article__text">
-               sit debitis aperiam ipsa omnis molestiae maxime hic, at repudiandae quos architecto voluptas quisquam
-               itaque perspiciatis eligendi expedita voluptates ullam! Sint.
+               За 2 роки я не тільки <strong>подолала свої страхи</strong>, я створила неймовірне коло однодумців зі
+               спільною міссією- Допомога людям, які <strong>потребують допомоги тут і зараз💫</strong>
             </p>
             <p class="about__article__text">
-               <strong> sit debitis aperiam ipsa</strong> omnis molestiae maxime hic, at repudiandae quos architecto
-               voluptas quisquam itaque perspiciatis eligendi expedita voluptates ullam! Sint.
+               А також допомогла своїм учням впевнено <strong>увійти у своє призначення</strong>. Доходи моїх учнів на
+               сьогодні становлять <strong>від 500 до 4 тисяч</strong> долларів.
             </p>
             <p class="about__article__text">
-               <strong> itaque - perspiciatis eligendi expedita </strong>
+               Я <strong>впевнена у своїй міссії</strong> і у тому, що езотерика тільки відривається Всесвіту.
             </p>
+            <p class="about__article__text">Тому, <strong class="colored">саме зараз - прекрасний час, щоб почати!</strong></p>
          </div>
       </article>
    </div>
 
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
 </section>
