--- a/esoteric/vite-sass/src/pages/homepage/results/results.html
+++ b/esoteric/vite-sass/src/pages/homepage/results/results.html
@@ -11,25 +11,33 @@
          <li>
             <p class="results__content-marker">(01)</p>
             <p class="results__content-text">
-               Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом
+               Будеш розуміти трактування фігурних картах у сферах особисте життя, робота, фінанси, здоров’я, переїзд
             </p>
          </li>
          <li>
             <p class="results__content-marker">(02)</p>
-            <p class="results__content-text">Кайфуєш від власних сторіс, витрачаючи всього 3 години</p>
+            <p class="results__content-text">
+               Матимеш розуміння, коли фігурна карта показує особистість, а коли ситуацію
+            </p>
          </li>
          <li>
             <p class="results__content-marker">(03)</p>
-            <p class="results__content-text">Кайфуєш від власних сторіс, витрачаючи 3 години</p>
+            <p class="results__content-text">
+               Зможеш робити розклади, правильно формулювати запитання та розуміти, що саме показують тобі карти в тій
+               чи іншій ситуації
+            </p>
          </li>
          <li>
             <p class="results__content-marker">(04)</p>
-            <p class="results__content-text">Кайфуєш від власних сторіс, виттиждень, а не робиш їх з надривом</p>
+            <p class="results__content-text">
+               Будеш отримувати позитивні відгуки від своїх клієнтів, які однозначно помітять зміни у твоєму баченні
+               карт
+            </p>
          </li>
          <li>
             <p class="results__content-marker">(05)</p>
             <p class="results__content-text">
-               Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом
+               Запускатимеш цікаві сторіз і пости, на які будеш отримувати запити на особисті розклади
             </p>
          </li>
       </ul>
@@ -38,21 +46,21 @@
    <div class="section__title roadmap">
       <p class="section__title_title full-width">
          Як буде проходити <br />
-         <span class="section__title_title-colored full-width">навчання:</span>
+         <span class="section__title_title-colored full-width">навчання?</span>
       </p>
 
       <ul class="roadmap__list">
          <li class="roadmap__item">
-            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом</p>
+            <p>Відразу після оплати отримає доступ до телеграм-боту, в якому отримаєш всі уроки.</p>
          </li>
 
          <li class="roadmap__item">
-            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години</p>
+            <p>Після кожного уроку будеш отримувати цікаве тестування на розуміння карт</p>
          </li>
          <li class="roadmap__item">
-            <p>Кайфуєш від власних сторіс, витрачаючи 3 години</p>
+            <p>Всі учасники можуть написати мені в будь-якому мессенджері і отримати відповідь на своє запитання.</p>
          </li>
-         <li class="roadmap__item"></li>
+         <li class="roadmap__item">Доступ до курсу безстроковий</li>
       </ul>
    </div>
 </section>
