--- a/esoteric/vite-sass/src/pages/homepage/description/description.html
+++ b/esoteric/vite-sass/src/pages/homepage/description/description.html
@@ -7,21 +7,26 @@
       <ul>
          <li>
             <p class="description__content-marker">01</p>
-            <p class="description__content-text">Кайфуєш від сторіс 3 години з надривом</p>
+            <p class="description__content-text">
+               <strong>Загальна характеристика Фігурних карт</strong> - розподіл по стихіям та рангам. Опис кожної
+               стихії з детальними трактовками.
+            </p>
             <div>
                <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
             </div>
          </li>
          <li>
             <p class="description__content-marker">02</p>
-            <p class="description__content-text">Кайфуєш від власних сторіс, витрачаючи всього 3 години</p>
+            <p class="description__content-text">Детальні трактовки 16 фігурних карт.</p>
             <div>
                <img src="../../../assets/images/pictures/hq720.jpg" alt="video lesson" />
             </div>
          </li>
          <li>
             <p class="description__content-marker">03</p>
-            <p class="description__content-text">витрачаючи 3 години</p>
+            <p class="description__content-text">
+               <strong> Символіка, основні значення</strong>, особисте життя, робота, фінанси, здоров’я, порада.
+            </p>
             <div>
                <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
             </div>
@@ -46,7 +51,10 @@
    <div class="description__conclusion">
       <ul class="description__conclusion-list">
          <li class="description__conclusion-item">
-            <p class="description__content-text">Кайфуєш від тиждень, а не робиш їх з надривом <strong> по інфопродуктам та доступ до чату</strong> по інтенсиву</p>
+            <p class="description__content-text">
+               Кайфуєш від тиждень, а не робиш їх з надривом <strong> по інфопродуктам та доступ до чату</strong> по
+               інтенсиву
+            </p>
          </li>
          <li class="description__conclusion-item">
             <p class="description__content-text">
