--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -1,8 +1,7 @@
 <section id="features" class="section features">
    <div class="section__title">
       <p class="section__title_title">
-         інтенсив буде корисним <br />
-         для тебе, <span class="section__title_title-colored">якщо ти:</span>
+         Інтенсив буде корисним для тебе, <span class="section__title_title-colored">якщо ти:</span>
       </p>
    </div>
 
@@ -13,8 +12,8 @@
                <img src="../../../assets/images/pictures/image.gif" alt="minions apploused" />
             </div>
             <p class="features__item-text">
-               <span>repudiandae quos architecto voluptas</span> quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
+               <span>Тільки починаєш вивчати Таро</span>. Є бажання, але
+               <span>книги і відео з соц.мереж тебе більше заплутують</span>, ніж дають відповідь на твої запитання
             </p>
          </li>
          <li class="features__item">
@@ -22,18 +21,16 @@
                <img src="../../../assets/images/pictures/dog-typing.gif" alt="dog typing" />
             </div>
             <p class="features__item-text">
-               <span>e quos architecto voluptas </span>quisquam itaque perspiciatis eligendi expedita voluptates ullam!
-               Sint.
+               Пройшов курс або декілька курсів, але фігурні
+               <span>карти у розкладах викликають більше запитань, ніж відповідей.</span>
+               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся.
             </p>
          </li>
          <li class="features__item">
             <div class="features__item-image">
                <img src="../../../assets/images/minified/homer-1.gif" alt="homer hiding in bushes" />
             </div>
-            <p class="features__item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit
-               <span>aperiam ipsa omnis</span> molestiae maxime hic
-            </p>
+            <p class="features__item-text">Потребуєш <span>пітримки і зворотнього зв’язку</span> від наставника.</p>
          </li>
       </ul>
    </div>
