--- a/esoteric/vite-sass/src/pages/homepage/testimonials/testimonials.html
+++ b/esoteric/vite-sass/src/pages/homepage/testimonials/testimonials.html
@@ -8,52 +8,23 @@
    <div class="section__content testimonials__content">
       <ul>
          <li>
-            <p class="testimonials__content-text">Ірина Ірина</p>
-            <p class="testimonials__content-text">
-               Lorem ipsum dolor <span> sit amet👍 consectetur facere repellat deleniti</span> adipisicing elit. Beatae eveniet architecto dolorum quod
-               distinctio. Nesciunt et veniam 🙂 incidunt, dolor, quia ipsum fugiat debitis ❤️❤️ullam nostrum, porro
-               numquam
-               <span> facere repellat deleniti</span>.
-            </p>
+            <p class="testimonials__content-text">Ольга</p>
+            <div class="testimonials__content-text">
+               <img src="../../../assets/images/textimonials/IMG_8024.png" alt="telegram screenshot" />
+            </div>
          </li>
          <li>
-            <p class="testimonials__content-text">Ірина Ірина</p>
-            <p class="testimonials__content-text">
-               <span>Lorem ipsum dolor sit amet consectetur</span> adipisicing elit 🙂. Beatae eveniet architecto
-               dolorum quod distinctio. Nesciunt et veniam incidunt, ✍️〽️dolor, quia ipsum fugiat debitis ullam nostrum,
-               porro numquam facere repellat deleniti.
-            </p>
+            <p class="testimonials__content-text">Ксенія</p>
+            <div class="testimonials__content-text">
+               <img src="../../../assets/images/textimonials/IMG_8023.png" alt="telegram screenshot" />
+            </div>
          </li>
          <li>
-            <p class="testimonials__content-text">Ірина Ірина</p>
-            <p class="testimonials__content-text">
-               Lorem ipsum dolor sit amet✍️〽️ consectetur adipisicing elit.
-               <span
-                  >Beatae eveniet architecto dolorum quod distinctio. Nesciunt et 😍 veniam incidunt, dolor, quia ipsum
-                  fugiat</span
-               >
-               debitis ullam nostrum,❤️❤️❤️ porro numquam facere repellat deleniti.
-            </p>
-         </li>
-         <li>
-            <p class="testimonials__content-text">Ірина Ірина</p>
-            <p class="testimonials__content-text">
-               Lorem ipsum dolor sit amet consectetur a👍dipisicing elit. Beatae eveniet architecto dolorum quod
-               distinctio. Nesciunt et veniam incidunt, 〽️🙂dolor,
-               <span> quia ipsum fugiat debitis ullam nostrum,</span> porro numquam facere repellat deleniti🙏.
-            </p>
-         </li>
-         <li>
-            <p class="testimonials__content-text">Ірина Ірина</p>
-            <p class="testimonials__content-text">
-               <span>Lorem ipsum dolor sit amet</span> consectetur adipisicing elit. Beatae eveniet architecto dolorum
-               quod distinctio❤️. Nesciunt et <span>veniam incidunt, dolor, quia ipsum fugiat debitis</span> ullam
-               nostrum, porro numquam facere repellat deleniti.
-            </p>
+            <p class="testimonials__content-text">Світлана</p>
+            <div class="testimonials__content-text">
+               <img src="../../../assets/images/textimonials/IMG_8003.png" alt="telegram screenshot" />
+            </div>
          </li>
       </ul>
    </div>
-
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
 </section>
