--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -23,14 +23,16 @@
             <p class="features__item-text">
                Пройшов курс або декілька курсів, але фігурні
                <span>карти у розкладах викликають більше запитань, ніж відповідей.</span>
-               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся.
             </p>
          </li>
          <li class="features__item">
             <div class="features__item-image">
                <img src="../../../assets/images/pictures/homer-1.gif" alt="homer hiding in bushes" />
             </div>
-            <p class="features__item-text">Потребуєш <span>пітримки і зворотнього зв’язку</span> від наставника.</p>
+            <p class="features__item-text">
+               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся. Потребуєш
+               <span>пітримки і зворотнього зв’язку</span> від наставника.
+            </p>
          </li>
       </ul>
    </div>
