feat: added laptop styles to about section

--- a/esoteric/vite-sass/src/pages/homepage/about/about.html
+++ b/esoteric/vite-sass/src/pages/homepage/about/about.html
@@ -5,7 +5,7 @@
 
    <div class="section__content">
       <article class="about__article">
-         <div class="about__article-content">
+         <div class="about__article__content">
             <p class="about__article__text">
                За
                <strong class="colored"> 2,5 роки </strong>
@@ -63,7 +63,7 @@
                <img src="../../../assets/images/photo/IMG_1188.jpeg" alt="cards tarot" />
             </div>
          </div>
-         <div class="about__article-content">
+         <div class="about__article__content">
             <p class="about__article__text">
                Запускаючи свою сторінку, я <strong>боялась показувати своє обличчя</strong> і не розповідала нікому зі
                своїх друзів про шлях, який обрала. <strong>Я відчувала, що езотерика - моє призначення</strong>, але
