feat: added laptop styles results, roadmap & footer sections

--- a/esoteric/vite-sass/src/pages/homepage/footer/footer.html
+++ b/esoteric/vite-sass/src/pages/homepage/footer/footer.html
@@ -9,8 +9,8 @@
       <a class="footer__link" href="#">Договір оферти</a>
    </div>
 
-   <span class="footer__copyright">
+   <div class="footer__copyright">
       Made with ❤️ by
       <a href="https://github.com/hustle2live" target="_blank" rel="noopener noreferrer"> @VK28 </a>
-   </span>
+   </div>
 </div>
