--- a/esoteric/vite-sass/src/pages/homepage/questions/questions.html
+++ b/esoteric/vite-sass/src/pages/homepage/questions/questions.html
@@ -30,6 +30,8 @@
             </div>
             <div class="questions__dropdown-element">
                <p class="questions__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit praesentium veritatis minus blanditiis
+                  iusto quis placeat, vel exercitationem tempore
                   <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
                </p>
             </div>
@@ -56,9 +58,11 @@
             </div>
             <div class="questions__dropdown-element">
                <p class="questions__text">
-                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
-                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
-                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Et, doloribus repudiandae. Tenetur voluptate cumque
+                  tempora, pariatur earum a, perspiciatis in, suscipit expedita illo facere ratione eligendi. Impedit
+                  tenetur asperiores distinctio.
                </p>
             </div>
          </li>
@@ -84,8 +88,10 @@
             </div>
             <div class="questions__dropdown-element">
                <p class="questions__text">
-                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
-                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Placeat animi eum nesciunt ea fuga nulla
+                  reprehenderit iste saepe, libero, quibusdam velit hic quas quidem distinctio odio ipsam eligendi,
+                  debitis perferendis.
                </p>
             </div>
          </li>
