--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -9,7 +9,7 @@
       <ul class="features__list">
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/pictures/image.gif" alt="minions apploused" />
+               <img src="../../../assets/images/photo/IMG_8017.png" alt="minions apploused" />
             </div>
             <p class="features__item-text">
                <span>Тільки починаєш вивчати Таро</span>. Є бажання, але
@@ -18,7 +18,7 @@
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/pictures/dog-typing.gif" alt="dog typing" />
+               <img src="../../../assets/images/photo/IMG_5504.jpg" alt="homer hiding in bushes" />
             </div>
             <p class="features__item-text">
                Пройшов курс або декілька курсів, але фігурні
@@ -27,16 +27,21 @@
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/pictures/homer-1.gif" alt="homer hiding in bushes" />
+               <img src="../../../assets/images/photo/IMG_8017.png" alt="minions apploused" />
             </div>
             <p class="features__item-text">
-               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся. Потребуєш
+               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся.
+            </p>
+         </li>
+         <li class="features__item">
+            <div class="features__item-image">
+               <img src="../../../assets/images/photo/IMG_8018.png" alt="homer hiding in bushes" />
+            </div>
+            <p class="features__item-text">
+               Потребуєш
                <span>пітримки і зворотнього зв’язку</span> від наставника.
             </p>
          </li>
       </ul>
    </div>
-
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
 </section>
