--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -23,6 +23,7 @@
          <button class="toggle_theme-btn"></button>
          <button><a class="top-btn" href="#top"> TOP Button </a></button>
       </div>
+      <load src="./pages/register-form/form.html" />
       <script type="module" src="./js/main.js"></script>
    </body>
 </html>
