--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -12,8 +12,9 @@
                <img src="../../../assets/images/photo/IMG_8017.png" alt="minions apploused" />
             </div>
             <p class="features__item-text">
-               <span>Тільки починаєш вивчати Таро</span>. Є бажання, але
-               <span>книги і відео з соц.мереж тебе більше заплутують</span>, ніж дають відповідь на твої запитання
+               <span class="colored">Тільки починаєш вивчати Таро</span>. Є бажання, але
+               <span class="colored">книги і відео з соц.мереж тебе більше заплутують</span>, ніж дають відповідь на
+               твої запитання
             </p>
          </li>
          <li class="features__item">
@@ -22,7 +23,7 @@
             </div>
             <p class="features__item-text">
                Пройшов курс або декілька курсів, але фігурні
-               <span>карти у розкладах викликають більше запитань, ніж відповідей.</span>
+               <span class="colored">карти у розкладах викликають більше запитань, ніж відповідей.</span>
             </p>
          </li>
          <li class="features__item">
@@ -39,7 +40,7 @@
             </div>
             <p class="features__item-text">
                Потребуєш
-               <span>пітримки і зворотнього зв’язку</span> від наставника.
+               <span class="colored">пітримки і зворотнього зв’язку</span> від наставника.
             </p>
          </li>
       </ul>
