--- a/esoteric/vite-sass/src/pages/homepage/about/about.html
+++ b/esoteric/vite-sass/src/pages/homepage/about/about.html
@@ -53,6 +53,32 @@
          <div class="about__article__picture">
             <div class="about__article__picture-frame">
                <img src="../../../assets/images/photo/IMG_5384.jpg" alt="magic triangle" />
+               <div class="about__article__picture-bg_icon">
+                  <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M12.5497 3.43948C12.118 2.50904 11.9022 2.04382 11.5213 2.00452C11.1405 1.96522 10.8468 2.37786 10.2595 3.20314L10.1075 3.41665C9.9406 3.65117 9.85715 3.76843 9.73698 3.83908C9.61681 3.90973 9.47352 3.92577 9.18695 3.95785L8.92606 3.98706C7.91761 4.09997 7.41339 4.15643 7.26346 4.50779C7.11353 4.85916 7.41719 5.27274 8.0245 6.0999L8.18162 6.31389C8.3542 6.54895 8.44049 6.66647 8.4718 6.80408C8.5031 6.94169 8.47588 7.08381 8.42143 7.36804L8.37186 7.62681C8.18025 8.62703 8.08445 9.12714 8.37265 9.3836C8.66086 9.64006 9.1422 9.48302 10.1049 9.16895L10.3539 9.0877C10.6275 8.99845 10.7643 8.95383 10.9038 8.96823C11.0433 8.98262 11.1698 9.05441 11.4227 9.19799L11.653 9.32871C12.543 9.83397 12.988 10.0866 13.316 9.89374C13.6441 9.70087 13.6379 9.19024 13.6256 8.16897L13.6224 7.90476C13.6189 7.61455 13.6171 7.46944 13.672 7.34073C13.727 7.21202 13.8323 7.11427 14.0431 6.91878L14.235 6.7408C14.9767 6.05285 15.3475 5.70887 15.262 5.33322C15.1766 4.95756 14.6914 4.79901 13.7211 4.4819L13.4701 4.39986C13.1943 4.30975 13.0565 4.26469 12.9509 4.17074C12.8453 4.0768 12.784 3.9446 12.6613 3.6802L12.5497 3.43948Z"
+                        stroke="#1C274C"
+                        stroke-width="1.5"
+                     />
+                     <path
+                        d="M10.9998 22C10.6665 19.8333 10.1998 14.8 10.9998 12"
+                        stroke="#1C274C"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                     />
+                     <path
+                        d="M14.5 22C14.5 20.8748 14.6709 19.4838 15.1281 18M22 9.5C19.8009 10.7828 18.2063 12.3567 17.0685 14"
+                        stroke="#1C274C"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                     />
+                     <path
+                        d="M5.00012 13.2676C5.00012 13.2676 5.64973 14.0154 6.2227 14.1689C6.79567 14.3225 7.73217 13.9996 7.73217 13.9996C7.73217 13.9996 6.98434 14.6492 6.83081 15.2222C6.67729 15.7952 7.00012 16.7317 7.00012 16.7317C7.00012 16.7317 6.3505 15.9839 5.77753 15.8303C5.20457 15.6768 4.26807 15.9996 4.26807 15.9996C4.26807 15.9996 5.01589 15.35 5.16942 14.777C5.32295 14.2041 5.00012 13.2676 5.00012 13.2676Z"
+                        stroke="#1C274C"
+                        stroke-linejoin="round"
+                     />
+                  </svg>
+               </div>
             </div>
          </div>
       </article>
@@ -61,6 +87,41 @@
          <div class="about__article__picture">
             <div class="about__article__picture-frame">
                <img src="../../../assets/images/photo/IMG_1188.jpeg" alt="cards tarot" />
+               <div class="about__article__picture-bg_icon">
+                  <svg
+                     version="1.0"
+                     xmlns="http://www.w3.org/2000/svg"
+                     width="905.000000pt"
+                     height="980.000000pt"
+                     viewBox="0 0 905.000000 980.000000"
+                     preserveAspectRatio="xMidYMid meet"
+                  >
+                     <g
+                        transform="translate(0.000000,980.000000) scale(0.100000,-0.100000)"
+                        fill="#000000"
+                        stroke="none"
+                     >
+                        <path
+                           d="M7896 9608 c-3 -106 -9 -237 -12 -290 l-7 -98 -111 0 c-225 0 -565
+-37 -846 -91 -1577 -306 -2907 -1329 -3606 -2774 -215 -445 -353 -875 -416
+-1298 -34 -229 -30 -602 9 -764 4 -19 -15 -32 -194 -122 -504 -254 -901 -539
+-1283 -921 -734 -733 -1225 -1709 -1379 -2740 -21 -142 -56 -489 -49 -495 2
+-2 49 -7 104 -11 l100 -7 17 191 c70 781 326 1521 754 2176 398 609 966 1143
+1593 1498 172 98 382 201 389 191 4 -4 20 -42 36 -83 199 -527 645 -907 1125
+-960 370 -41 783 133 998 420 56 76 118 203 144 297 28 104 31 307 5 403 -70
+262 -267 445 -546 506 -298 66 -855 -19 -1423 -216 -95 -34 -177 -62 -182 -63
+-19 -4 -29 103 -29 328 -1 190 3 255 22 374 59 380 204 821 405 1227 109 222
+177 341 293 519 539 821 1291 1449 2193 1830 533 225 1230 374 1748 375 l122
+0 0 -57 c0 -32 -5 -157 -10 -277 -5 -121 -8 -221 -7 -223 5 -5 1187 619 1187
+626 0 3 -242 158 -538 344 -295 186 -551 346 -568 357 l-31 20 -7 -192z
+m-3244 -5172 c207 -40 331 -136 398 -311 20 -51 24 -79 24 -185 1 -111 -2
+-133 -26 -198 -90 -247 -318 -437 -610 -507 -438 -105 -904 148 -1170 635 -40
+72 -108 239 -108 263 0 17 84 52 300 123 232 77 580 156 825 187 78 10 299 6
+367 -7z"
+                        />
+                     </g>
+                  </svg>
+               </div>
             </div>
          </div>
          <div class="about__article__content">
@@ -80,9 +141,10 @@
             <p class="about__article__text">
                Я <strong>впевнена у своїй міссії</strong> і у тому, що езотерика тільки відривається Всесвіту.
             </p>
-            <p class="about__article__text">Тому, <strong class="colored">саме зараз - прекрасний час, щоб почати!</strong></p>
+            <p class="about__article__text">
+               Тому, <strong class="colored">саме зараз - прекрасний час, щоб почати!</strong>
+            </p>
          </div>
       </article>
    </div>
-
 </section>
