feat: added bottom section cta

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -35,6 +35,7 @@
          </a>
       </div>
       <load src="./pages/register-form/form.html" />
+      <load src="./pages/homepage/cta/cta.html" />
       <script type="module" src="./js/main.js"></script>
    </body>
 </html>
