feat: modify styles

--- a/esoteric/vite-sass/src/pages/homepage/header/header.html
+++ b/esoteric/vite-sass/src/pages/homepage/header/header.html
@@ -10,7 +10,7 @@
             голові по поличках!
          </h1>
          <p class="header__subtitle">8 теоретичних лекцій + приклади розкладів, заснованних на власних напрацюваннях</p>
-         <p class="header__description inclined">Підходить, як для тарологів-початківців, так і для практиків</p>
+         <p class="header__description inclined">Підходить, як для тарологів-початківців, так і для практиків!</p>
       </div>
       <div class="header__cta">
          <button class="header__button">790 грн замість <span class="header__button-strike">1800</span> грн</button>
