feat: modified styles & html content

--- a/esoteric/vite-sass/src/pages/homepage/about/about.html
+++ b/esoteric/vite-sass/src/pages/homepage/about/about.html
@@ -132,7 +132,7 @@
             </p>
             <p class="about__article__text">
                За 2 роки я не тільки <strong>подолала свої страхи</strong>, я створила неймовірне коло однодумців зі
-               спільною міссією- Допомога людям, які <strong>потребують допомоги тут і зараз💫</strong>
+               спільною міссією - Допомога людям, які <strong>потребують підтримки тут і зараз💫</strong>
             </p>
             <p class="about__article__text">
                А також допомогла своїм учням впевнено <strong>увійти у своє призначення</strong>. Доходи моїх учнів на
