--- a/esoteric/vite-sass/src/pages/homepage/cta/cta.html
+++ b/esoteric/vite-sass/src/pages/homepage/cta/cta.html
@@ -1,3 +1,3 @@
 <div class="cta hidden">
-   <button class="cta__button">Приєднатися зараз лише за 790 грн</button>
+   <button class="cta__button">Приєднатися <span>зараз лише </span>за 790 грн</button>
 </div>
