--- a/esoteric/vite-sass/src/pages/homepage/description/description.html
+++ b/esoteric/vite-sass/src/pages/homepage/description/description.html
@@ -9,7 +9,7 @@
             <p class="description__content-marker">01</p>
             <p class="description__content-text">
                <strong>Загальна характеристика Фігурних карт</strong> - розподіл по стихіям та рангам. Опис кожної
-               стихії з детальними трактовками.
+               стихії та рангу з детальними трактовками.
             </p>
             <div>
                <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
@@ -17,7 +17,10 @@
          </li>
          <li>
             <p class="description__content-marker">02</p>
-            <p class="description__content-text">Детальні трактовки 16 фігурних карт.</p>
+            <p class="description__content-text">
+               <strong>Детальні трактовки 16 фігурних карт.</strong> Символіка, основні значення, особисте життя,
+               робота, фінанси, здоров’я, порада.
+            </p>
             <div>
                <img src="../../../assets/images/pictures/hq720.jpg" alt="video lesson" />
             </div>
@@ -25,7 +28,7 @@
          <li>
             <p class="description__content-marker">03</p>
             <p class="description__content-text">
-               <strong> Символіка, основні значення</strong>, особисте життя, робота, фінанси, здоров’я, порада.
+               <strong>Тонкощі фігурних карт</strong>, засновані на власних напрацюваннях та досвіді.
             </p>
             <div>
                <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
@@ -33,14 +36,14 @@
          </li>
          <li>
             <p class="description__content-marker">04</p>
-            <p class="description__content-text">Кайфуєш від власних сторіс, виттиждень, а не робиш їх з надривом</p>
+            <p class="description__content-text"><strong>Приклади розкладів</strong> з детальними трактуваннями</p>
             <div>
                <img src="../../../assets/images/pictures/Video-bubble-blog-hero.gif" alt="video lesson" />
             </div>
          </li>
          <li>
             <p class="description__content-marker">05</p>
-            <p class="description__content-text">Кайфуєш від тиждень, а не робиш їх з надривом</p>
+            <p class="description__content-text"><strong>Тестування</strong> для засвоєння інформації</p>
             <div>
                <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
             </div>
@@ -52,15 +55,11 @@
       <ul class="description__conclusion-list">
          <li class="description__conclusion-item">
             <p class="description__content-text">
-               Кайфуєш від тиждень, а не робиш їх з надривом <strong> по інфопродуктам та доступ до чату</strong> по
-               інтенсиву
+               <strong>Відео-нарізки</strong> з фільмів <strong>з сигніфікацією</strong> кожної придворної карти
             </p>
          </li>
          <li class="description__conclusion-item">
-            <p class="description__content-text">
-               У подарунок ти отримаєш <strong>бонусний урок </strong> по інфопродуктам та доступ до чату, де зможеш
-               поставити будь-яке запитання по інтенсиву
-            </p>
+            <p class="description__content-text"><strong>Методичка</strong> з детальними трактовками у подарунок</p>
          </li>
       </ul>
       <div class="description__conclusion-gift">
