--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -9,37 +9,37 @@
       <ul class="features__list">
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/photo/IMG_8017.png" alt="minions apploused" />
+               <img src="../../../assets/images/photo/IMG_8620.jpg" alt="workbook" />
             </div>
             <p class="features__item-text">
                <span>Тільки починаєш вивчати Таро</span>. Є бажання, але
-               <span>книги і відео з соц.мереж тебе більше заплутують</span>, ніж дають відповідь на твої запитання
+               <span>книги і відео з соц.мереж тебе більше заплутують</span>, ніж дають відповіді.
             </p>
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/photo/IMG_5504.jpg" alt="homer hiding in bushes" />
+               <img src="../../../assets/images/photo/IMG_5504.jpg" alt="girls team meeting" />
             </div>
             <p class="features__item-text">
-               Пройшов курс або декілька курсів, але фігурні
+               Пройшла декілька курсів, але фігурні
                <span>карти у розкладах викликають більше запитань, ніж відповідей.</span>
             </p>
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/photo/IMG_8017.png" alt="minions apploused" />
+               <img src="../../../assets/images/photo/IMG_8021.jpg" alt="work book and lamp" />
             </div>
             <p class="features__item-text">
-               Вже працюєш з людьми, але періодично отримуєш відповідь від клієнтів, що розклад не програвся.
+               <span>Вже працюєш з людьми</span>, але періодично отримуєш відповіді від клієнтів, що <span>розклад не програвся.</span>
             </p>
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../assets/images/photo/IMG_8018.png" alt="homer hiding in bushes" />
+               <img src="../../../assets/images/photo/IMG_8018.png" alt="students get their certificates" />
             </div>
             <p class="features__item-text">
                Потребуєш
-               <span>пітримки і зворотнього зв’язку</span> від наставника.
+               <span>підтримки і зворотнього зв’язку</span> від наставника.
             </p>
          </li>
       </ul>
