--- a/esoteric/vite-sass/src/pages/homepage/results/results.html
+++ b/esoteric/vite-sass/src/pages/homepage/results/results.html
@@ -51,16 +51,14 @@
 
       <ul class="roadmap__list">
          <li class="roadmap__item">
-            <p>Відразу після оплати отримає доступ до телеграм-боту, в якому отримаєш всі уроки.</p>
-         </li>
-
-         <li class="roadmap__item">
-            <p>Після кожного уроку будеш отримувати цікаве тестування на розуміння карт</p>
+            <p>Відразу після оплати отримаєш доступ до телеграм-боту, в якому отримаєш всі уроки.</p>
          </li>
          <li class="roadmap__item">
             <p>Всі учасники можуть написати мені в будь-якому мессенджері і отримати відповідь на своє запитання.</p>
          </li>
-         <li class="roadmap__item">Доступ до курсу безстроковий</li>
+         <li class="roadmap__item">
+            <p>Доступ до курсу безстроковий</p>
+         </li>
       </ul>
    </div>
 </section>
