--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
    <head>
       <meta charset="UTF-8" />
-      <link rel="icon" type="image/svg+xml" href="../public/sass.svg" />
+      <link rel="icon" type="image/svg+xml" href="../public/tarot-card-2.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>SASS Tutorial template</title>
+      <title>Курс по фігурним картам Таро</title>
    </head>
    <body id="top">
       <div class="wrapper">
