feat: feat colors and social links

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             color: rgb(253, 185, 59);
          }
          .webLink {
-            color: rgb(126, 170, 219);
+            color: rgb(62, 127, 201);
          }
          .webLink:hover {
-            color: rgb(145, 191, 243);
+            color: rgb(82, 145, 218);
          }
 
          .content {
@@ -273,10 +273,10 @@
 
             <br />
             <hr />
-            <h4>Contacts:</h4>
 
+            <h4>Contacts:</h4>
             <div class="icon-container">
-               <a class="icon-link" href="https://github.com/hustle2live" target="_blank">
+               <a class="icon-link" href="https://www.github.com/hustle2live" target="_blank">
                   <img
                      src="./images/icons/social/github.ico"
                      alt="github"
@@ -285,16 +285,16 @@
                      height="24"
                   />
                </a>
-               <a class="icon-link" href="https://github.com/hustle2live" target="_blank">
+               <a class="icon-link" href="https://www.linkedin.com/in/vkuznietsov-bb066376/" target="_blank">
                   <img
-                     src="./images/icons/social/facebook-circle.png"
+                     src="./images/icons/social/linked_in.png"
                      alt="telegram"
                      title="view my facebook page"
                      width="24"
                      height="24"
                   />
                </a>
-               <a class="icon-link" href="https://github.com/hustle2live" target="_blank">
+               <a class="icon-link" href="https://www.t.me/vkuznetsov28" target="_blank">
                   <img
                      src="./images/icons/social/telegram-circle.png"
                      alt="telegram"
