feat: changed реьд

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                justify-content: center;
             }
             .website-preview {
-               margin: 0 -20px -20px;
+               margin: 0 -20px;
             }
          }
       </style>
@@ -244,19 +244,19 @@
             <ol>
                <li>
                   <a class="webLink" href="https://taro-kliuchsveta.com/" target="_blank">
-                     <span class="unclickable"> Taro Esoteric course (responsive)</span>
+                     <span class="unclickable"> Taro Esoteric course</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/ARGO-E-landing-page/" target="_blank">
-                     <span class="unclickable"> HVAC Services (responsive)</span>
+                     <span class="unclickable"> HVAC Services</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://revizoravto.com.ua/" target="_blank">
-                     <span class="unclickable"> CAR selection Services (responsive)</span>
+                     <span class="unclickable"> CAR selection Services</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
@@ -266,7 +266,7 @@
             <ol>
                <li>
                   <a class="webLink" href="https://cat-landing.netlify.app/" target="_blank">
-                     <span class="unclickable"> Catadamy (responsive)</span>
+                     <span class="unclickable"> Catadamy</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
@@ -278,13 +278,13 @@
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/accounting" target="_blank">
-                     <span class="unclickable"> Accounting (responsive)</span>
+                     <span class="unclickable"> Accounting</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/space" target="_blank">
-                     <span class="unclickable"> Space Research center (responsive)</span>
+                     <span class="unclickable"> Space Research center</span>
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
