feat: changed html

--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
             <ol>
                <li>
                   <a class="webLink" href="https://taro-kliuchsveta.com/" target="_blank">
-                     <span class="unclickable"> Taro Esoteric course</span>
+                     Taro Esoteric course
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/ARGO-E-landing-page/" target="_blank">
-                     <span class="unclickable"> HVAC Services</span>
+                     HVAC Services
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://revizoravto.com.ua/" target="_blank">
-                     <span class="unclickable"> CAR selection Services</span>
+                     CAR selection Services
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
@@ -266,25 +266,25 @@
             <ol>
                <li>
                   <a class="webLink" href="https://cat-landing.netlify.app/" target="_blank">
-                     <span class="unclickable"> Catadamy</span>
+                     Catadamy
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/cinema" target="_blank">
-                     <span class="unclickable"> IPTV Services (mobile only)</span>
+                     IPTV Services (mobile only)
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/accounting" target="_blank">
-                     <span class="unclickable"> Accounting</span>
+                     Accounting
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
                <li>
                   <a class="webLink" href="https://hustle2live.github.io/Landings/space" target="_blank">
-                     <span class="unclickable"> Space Research center</span>
+                     Space Research center
                      <img src="./images/icons/openlink/2990159.png" alt="link" />
                   </a>
                </li>
