feat: modified social img path

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   ><img
                      src="dist/assets/linked_in.png"
                      alt="telegram"
-                     title="view my facebook page"
+                     title="view my linked in page"
                      width="24"
                      height="24"
                   /> </a
