--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   alt="mobile"
                />
             </div>
-            <iframe title="preview wrapper" class="mobile" src="dist/assets/preview-1.png"></iframe>
+            <iframe title="preview wrapper" class="mobile" src="https://cat-landing.netlify.app/"></iframe>
          </div>
       </div>
    </body>
