--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   /></a>
                </li>
                <li>
-                  <a class="webLink" href="https://hustle2live.github.io/ARGO-E-landing-page/" target="_blank"
+                  <a class="webLink" href="https://argo-e.com.ua/" target="_blank"
                      >HVAC Services <img src="dist/assets/2990159.png" alt="link"
                   /></a>
                </li>
